// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CounterContainer > should render abovezero 1`] = `
<div>
  <div
    class="sc-gswNZR gxVSuE"
    data-testid="counter"
    type="abovezero"
  >
    1
  </div>
</div>
`;

exports[`CounterContainer > should render lesszero 1`] = `
<div>
  <div
    class="sc-gswNZR bZfoa-d"
    data-testid="counter"
    type="lesszero"
  >
    -1
  </div>
</div>
`;

exports[`CounterContainer > should render zero 1`] = `
<div>
  <div
    class="sc-gswNZR cneBUb"
    data-testid="counter"
    type="zero"
  >
    0
  </div>
</div>
`;
